@@ -27,6 +27,7 @@ module type S =
     val is_empty: 'a t -> bool
     val mem:  key -> 'a t -> bool
     val add: key -> 'a -> 'a t -> 'a t
+    val update: key -> ('a option -> 'a) -> 'a t -> 'a t
     val singleton: key -> 'a -> 'a t
     val remove: key -> 'a t -> 'a t
     val merge:
@@ -123,6 +124,21 @@ module Make(Ord: OrderedType) = struct
             if l == ll then m else bal ll v d r
           else
             let rr = add x data r in
+            if r == rr then m else bal l v d rr
+
+    let rec update x f = function
+        Empty ->
+          Node(Empty, x, f None, Empty, 1)
+      | Node(l, v, d, r, h) as m ->
+          let c = Ord.compare x v in
+          if c = 0 then
+            let data = f (Some d) in
+            if d == data then m else Node(l, x, data, r, h)
+          else if c < 0 then
+            let ll = update x f l in
+            if l == ll then m else bal ll v d r
+          else
+            let rr = update x f r in
             if r == rr then m else bal l v d rr
 
     let rec find x = function
